--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test"
